--- a/index.html
+++ b/index.html
@@ -637,20 +637,22 @@
 
     <div class="popup" data-pop="1">
         <div class="popup__inner">
-            <h3 class="popup__title">
-                Получить скидку
-            </h3>
-            <form class="popup__form form" action="#" method="post" name="popup-form">
-                <input class="popup__input input" type="text" placeholder="Введите промокод" name="promo">
-                <div class="popup__btn-wrapper btn-wrapper">
-                    <button class="popup__btn btn" type="submit" name="sub">
-                        Отправить
-                    </button>
-                    <a class="popup__link link" href="#">
-                        Купить без промокода
-                    </a>
-                </div>
-            </form>
+            <div class="popup__body">
+                <h3 class="popup__title">
+                    Получить скидку
+                </h3>
+                <form class="popup__form form" action="#" method="post" name="popup-form">
+                    <input class="popup__input input" type="text" placeholder="Введите промокод" name="promo">
+                    <div class="popup__btn-wrapper btn-wrapper">
+                        <button class="popup__btn btn" type="submit" name="sub">
+                            Отправить
+                        </button>
+                        <a class="popup__link link" href="#">
+                            Купить без промокода
+                        </a>
+                    </div>
+                </form>
+            </div>
         </div>
         <div class="popup__bg" data-close="1">
 
@@ -659,28 +661,32 @@
 
 
     <div class="popup" data-pop="2">
+
+
         <div class="popup__inner">
-            <h3 class="popup__title">
-                Наши программы
-            </h3>
-            <div class="popup__list">
-                <div class="popup__item">
-                    <a href="#">
-                        <img class="popup__img" src="img/popup/1.svg" alt="">
-                        <p class="popup__text">Предпринима-<br>тельство</p>
-                    </a>
-                </div>
-                <div class="popup__item">
-                    <a href="#">
-                        <img class="popup__img" src="img/popup/2.svg" alt="">
-                        <p class="popup__text">SMM</p>
-                    </a>
-                </div>
-                <div class="popup__item">
-                    <a href="#">
-                        <img class="popup__img" src="img/popup/3.svg" alt="">
-                        <p class="popup__text">Wildberries</p>
-                    </a>
+            <div class="popup__body">
+                <h3 class="popup__title">
+                    Наши программы
+                </h3>
+                <div class="popup__list">
+                    <div class="popup__item">
+                        <a href="#">
+                            <img class="popup__img" src="img/popup/1.svg" alt="">
+                            <p class="popup__text">Предпринима-<br>тельство</p>
+                        </a>
+                    </div>
+                    <div class="popup__item">
+                        <a href="#">
+                            <img class="popup__img" src="img/popup/2.svg" alt="">
+                            <p class="popup__text">SMM</p>
+                        </a>
+                    </div>
+                    <div class="popup__item">
+                        <a href="#">
+                            <img class="popup__img" src="img/popup/3.svg" alt="">
+                            <p class="popup__text">Wildberries</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
