--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
                     <nav class="header__menu">
                         <ul class="header__list">
                             <li class="header__item animate__animated animate__bounceInDown wow">
-                                <a class="header__link" href="#">О продукте</a>
+                                <a class="header__link" href="#" data-goto=".about">О продукте</a>
                             </li>
                             <li class="header__item animate__animated animate__bounceInDown wow" data-wow-delay="0.1s">
-                                <a class="header__link" href="#">Материал</a>
+                                <a class="header__link" href="#" data-goto=".quality">Материал</a>
                             </li>
                             <li class="header__item animate__animated animate__bounceInDown wow" data-wow-delay="0.2s">
-                                <a class="header__link" href="#">Кому подходит</a>
+                                <a class="header__link" href="#" data-goto=".suitable">Кому подходит</a>
                             </li>
                             <li class="header__item animate__animated animate__bounceInDown wow" data-wow-delay="0.3s">
-                                <a class="header__link" href="#">Курсы</a>
+                                <a class="header__link" href="#" data-goto=".course">Курсы</a>
                             </li>
                             <li class="header__item animate__animated animate__bounceInDown wow" data-wow-delay="0.4s">
-                                <a class="header__link" href="#">BUGO</a>
+                                <a class="header__link" href="#" data-goto=".discount">BUGO</a>
                             </li>
                             <li class="header__item animate__animated animate__bounceInDown wow" data-wow-delay="0.5s">
-                                <a class="header__link" href="#">Самообучение</a>
+                                <a class="header__link" href="#" data-goto=".training">Самообучение</a>
                             </li>
                             <li class="header__item header__item--last animate__animated animate__bounceInDown wow"
                                 data-wow-delay="0.5s">
