--- a/index.html
+++ b/index.html
@@ -241,33 +241,33 @@
                         Необходимые знания в&nbsp;маркетинге <span>для&nbsp;предпринимателей</span>
                     </p>
                 </a>
-                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#">
-                    <picture>
+                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#" data-open-pop="6">
+                    <picture data-open-pop="6">
                         <source class="quality__img" srcset="img/quality/4.webp" alt="">
                         <img class="quality__img" src="img/quality/4.jpg" alt="">
                     </picture>
-                    <p class="quality__text">
-                        Запуск инфопродукта, который&nbsp;принёс <br> <span>25&nbsp;000&nbsp;000&nbsp;руб.</span>
+                    <p class="quality__text" data-open-pop="6">
+                        Запуск инфопродукта, который&nbsp;принёс <br> <span data-open-pop="6">25&nbsp;000&nbsp;000&nbsp;руб.</span>
                     </p>
                 </a>
-                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#"
+                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#" data-open-pop="6"
                     disabled>
-                    <picture>
+                    <picture data-open-pop="6">
                         <source class="quality__img" srcset="img/quality/5.webp" alt="">
                         <img class="quality__img" src="img/quality/5.jpg" alt="">
                     </picture>
-                    <p class="quality__text">
-                        <span>20&nbsp;новых&nbsp;идей</span> <br>
+                    <p class="quality__text" data-open-pop="6">
+                        <span data-open-pop="6">20&nbsp;новых&nbsp;идей</span> <br>
                         для&nbsp;запуска <br>
                         рекламной кампании
                     </p>
                 </a>
-                <a class="quality__item wow animate__animated animate__fadeInUp" href="#">
-                    <picture>
+                <a class="quality__item wow animate__animated animate__fadeInUp" href="#" data-open-pop="6">
+                    <picture data-open-pop="6">
                         <source class="quality__img" srcset="img/quality/6.webp" alt="">
                         <img class="quality__img" src="img/quality/6.jpg" alt="">
                     </picture>
-                    <p class="quality__text quality__text--link">
+                    <p data-open-pop="6" class="quality__text quality__text--link">
                         Cмотреть все
                     </p>
                 </a>
@@ -737,7 +737,7 @@
     </div>
 
 
-    <div class="popup" data-pop="3">
+    <div class="popup active" data-pop="3">
         <div class="popup__inner">
             <div class="popup__body">
                 <h3 class="popup__title">
@@ -832,7 +832,7 @@
     </div>
 
 
-    <div class="popup active" data-pop="6">
+    <div class="popup" data-pop="6">
         <div class="popup__inner">
             <div class="popup__body">
                 <h3 class="popup__title">
