--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@
     <meta name="msapplication-TileImage" content="img/global/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <!-------------------------------------------------------------------------->
+    <!-- --------------------------------------------------------------------- -->
 
     <meta name="apple-mobile-web-app-title" content="Название"> <!-- Name on the phone screen -->
     <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Opening the site to full screen -->
@@ -241,17 +241,19 @@
                         Необходимые знания в&nbsp;маркетинге <span>для&nbsp;предпринимателей</span>
                     </p>
                 </a>
-                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#" data-open-pop="6">
+                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#"
+                    data-open-pop="6">
                     <picture data-open-pop="6">
                         <source class="quality__img" srcset="img/quality/4.webp" alt="">
                         <img class="quality__img" src="img/quality/4.jpg" alt="">
                     </picture>
                     <p class="quality__text" data-open-pop="6">
-                        Запуск инфопродукта, который&nbsp;принёс <br> <span data-open-pop="6">25&nbsp;000&nbsp;000&nbsp;руб.</span>
+                        Запуск инфопродукта, который&nbsp;принёс <br> <span
+                            data-open-pop="6">25&nbsp;000&nbsp;000&nbsp;руб.</span>
                     </p>
                 </a>
-                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#" data-open-pop="6"
-                    disabled>
+                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#"
+                    data-open-pop="6">
                     <picture data-open-pop="6">
                         <source class="quality__img" srcset="img/quality/5.webp" alt="">
                         <img class="quality__img" src="img/quality/5.jpg" alt="">
@@ -834,6 +836,9 @@
 
     <div class="popup" data-pop="6">
         <div class="popup__inner">
+            <!-- <div class="popup__close">
+                
+            </div> -->
             <div class="popup__body">
                 <h3 class="popup__title">
                     Этот материал недоступен
