--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </head>
 
-<body class="page lock">
+<body class="page">
 
     <div class="first-block">
         <header class="header">
@@ -638,21 +638,21 @@
     <footer class="footer page__footer">
         <div class="container">
             <div class="footer__inner">
-                <div class="footer__item wow animate__animated animate__fadeInDown" data-wow-delay=".1s">
+                <div class="footer__item">
                     <a href="#"><img class="footer__logo" src="img/footer/logo.svg" alt=""></a>
                 </div>
-                <ul class="footer__list wow animate__animated animate__fadeInDown" data-wow-delay=".2s">
+                <ul class="footer__list">
                     <li class="footer__li">Другие программы</li>
                     <li class="footer__li"><a href="#">Предпринимательство</a></li>
                     <li class="footer__li"><a href="#">SMM</a></li>
                     <li class="footer__li"><a href="#">Wilderries</a></li>
                 </ul>
-                <ul class="footer__list-2 wow animate__animated animate__fadeInDown" data-wow-delay=".3s">
+                <ul class="footer__list-2">
                     <li class="footer__li-2">Юридическая информация</li>
                     <li class="footer__li-2"><a href="#">Политика конфеденциальности</a></li>
                     <li class="footer__li-2"><a href="#">Договор оферты</a></li>
                 </ul>
-                <div class="footer__imgs-wrapper wow animate__animated animate__fadeInDown" data-wow-delay=".4s">
+                <div class="footer__imgs-wrapper">
                     <a href="#">
                         <svg class="footer__img" width="21" height="24" viewbox="0 0 21 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -739,7 +739,7 @@
     </div>
 
 
-    <div class="popup active" data-pop="3">
+    <div class="popup" data-pop="3">
         <div class="popup__inner">
             <div class="popup__body">
                 <h3 class="popup__title">
