--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Маркетинг / BU</title>
 
   <!-- For search engines -->
-  <meta name="description" content="Образовательная программа от платформы Brain University
-    доступна по подписке за 2 490р в месяц.">
+  <meta name="description"
+    content="Образовательная программа от платформы Brain University доступна по подписке за 2 490р в месяц.">
   <meta name="author" content="SIDs1de (Igor Denisenkov)">
   <meta name="image" content="img/global/prev.jpg"> <!-- logo -->
 
@@ -91,8 +91,9 @@
               </li>
               <li class="header__item header__item--last animate__animated animate__bounceInDown wow"
                 data-wow-delay="0.5s">
-                <a class="header__link" href="#">Политика конфиденциальности</a>
-                <a class="header__link" href="#">Договор оферты</a>
+                <a class="header__link" href="https://brainuniversity.ru/privacy-policy/">Политика
+                  конфиденциальности</a>
+                <a class="header__link" href="https://brainuniversity.ru/public-offer/">Договор оферты</a>
                 <div class="header__img-links">
                   <a class="header__img-link" href="#">
                     <svg class="header__img-link-img" width="30" height="30" viewbox="0 0 21 24" fill="none"
@@ -139,7 +140,7 @@
                 Образовательная программа —<br><span>Маркетинг</span>
               </h1>
               <p class="offer__subtitle animate__animated animate__fadeInLeft wow" data-wow-delay=".4s">
-                Каждый день вы будете осваивать новые маркетинг-технологии одним из первых. Узнаете, как
+                Каждый день вы будете осваивать новые маркетинг-технологии одним из первых. <br> Узнаете, как
                 работает современный маркетинг и как безошибочно настравивать рекламные кампании
               </p>
               <div class="offer__links">
@@ -177,13 +178,21 @@
             О продукте
           </h2>
           <p class="about__text">
-            Это платформа, на которой ежедневно выходят материалы для маркетологов, продюссеров онлайн-продуктов и
-            предпринимателей. Продукт подойдет тем, кто каждый день сталкивается с необходимостью искать новых клиентов
-            по работе или для своего бизнеса.
+            Это образовательная платформа, которая содержит ряд образовательных программ
+            для создателей онлайн-продуктов и предпринимателей.
           </p>
           <p class="about__text">
-            Все статьи приходят в телеграм-бот. Так мы избавляем вас от необходимости пользоваться сторонними ресурсами
-            и делаем процесс обучения привычным уже на старте.
+            Продукт подойдет всем, кто сталкивается с необходимостью привлечения новых клиентов для бизнеса.
+          </p>
+          <p class="about__text">
+            Все статьи приходят в закрытый канал, доступ к которому появляется после приобретения
+            образовательной
+            программы.
+          </p>
+          <p class="about__text">
+            Так мы избавляем вас от необходимости использовать сторонние ресурсы и делаем процесс
+            обучения привычным
+            уже на старте.
           </p>
         </div>
         <div class="about__info wow animate__animated animate__fadeIn" data-wow-delay=".5s">
@@ -207,9 +216,8 @@
         Качество материала
       </h2>
       <p class="quality__subtitle wow animate__animated animate__fadeIn" data-wow-delay="0.2s">
-        Мы выставили несколько статей в бесплатный доступ, чтобы&nbsp;вы могли ознакомиться и сами понять,
-        какого
-        уровня материалы будут публиковаться на платформе
+        Мы опубликовали несколько статей в открытый доступ, чтобы вы смогли ознакомиться и понять качество
+        образовательного материала.
       </p>
       <div class="quality__inner">
         <a class="quality__item wow animate__animated animate__fadeInUp" href="#" data-open-pop="7">
@@ -286,8 +294,8 @@
             Маркетологам
           </h3>
           <p class="suitable__card-text">
-            Повысите свои компетенции. Сможете перенять опыт успешных рекламных кампаний - рекламных стратегий, и одним
-            из&nbsp;первых применять новые технологии
+            Повысите свои компетенции. Сможете перенять опыт успешных рекламных кампаний - рекламных стратегий и одним
+            из&nbsp;первых применять новые технологии.
           </p>
         </div>
         <div class="suitable__item">
@@ -295,8 +303,8 @@
             Предпринимателям
           </h3>
           <p class="suitable__card-text">
-            Поймёте процесс маркетинга изнутри. Сможете эффективней продавать свои товары или лучше контролировать свою
-            команду
+            Поймёте процесс маркетинга изнутри. Сможете эффективнее продавать свои товары или лучше контролировать свою
+            команду.
           </p>
         </div>
         <div class="suitable__item">
@@ -304,7 +312,7 @@
             Продюссерам онлайн-курсов
           </h3>
           <p class="suitable__card-text">
-            Структурируете все процессы. Узнаете о сервисах которые позволят экономить время и ресурсы при создании
+            Структурируете все процессы. Узнаете о сервисах, которые позволят экономить время и ресурсы при создании
             продукта.
           </p>
         </div>
@@ -313,7 +321,7 @@
             Школьникам и студентам
           </h3>
           <p class="suitable__card-text">
-            Освоите современную онлайн-профессию. Узнаете как выйти на фриланс, устроиться в маркетинговое агентство, и
+            Освоите современную онлайн-профессию. Узнаете, как выйти на фриланс, устроиться в маркетинговое агентство и
             получите все необходимые знания для успешной работы по этой профессии.
           </p>
         </div>
@@ -344,7 +352,7 @@
                 От 2 недель до года
               </td>
               <td class="course__td">
-                Всегда
+                Без ограничений
               </td>
             </tr>
 
@@ -458,8 +466,8 @@
             <img class="training__img" src="img/training/1.svg" alt="">
           </picture>
           <p class="training__text">
-            Самостоятельное обучение — долгий, трудный и не очень приятный путь. Все знания вам придется
-            добывать на собственных ошибках
+            Самостоятельное обучение — долгий, трудный и не очень приятный путь. Свой
+            опыт вам придется накапливать на личных ошибках.
           </p>
         </div>
         <div class="training__item">
@@ -468,8 +476,8 @@
             <img class="training__img" src="img/training/2.svg" alt="">
           </picture>
           <p class="training__text">
-            На платформе вы получите уже отобранный и проверенный материал. Так вы сэкономите много сил,
-            времени и средств
+            На платформе вы получите уже отобранный и проверенный материал.
+            Так вы сэкономите много сил, времени и средств
           </p>
         </div>
       </div>
@@ -484,12 +492,12 @@
             Brain University Good Option
           </h2>
           <p class="option__text">
-            На платформе помимо обучения вы можете создать и развить <span>собственный стартап.</span>
+            На платформе, помимо обучения, вы можете создать и развить <span>собственный стартап.</span>
             Если у вас есть идея, вы сможете найти дизайнеров, маркетологов, программистов и прочих специалистов, чтобы
             воплотить её в жизнь.
           </p>
           <p class="option__text">
-            Принцип работы Bu Go заключается в том что каждый ученик образовательной программы может создать заявку
+            Принцип работы Bu Go заключается в том, что каждый ученик образовательной программы может создать заявку
             которая <span>автоматически публикуется в закрытом Telegram-канале</span> доступ до которого есть только у
             учеников.
           </p>
@@ -500,7 +508,7 @@
             <span>Биржа стартапов</span> - Возможность опубликовать стартап, привлечь инвестиции / команду.
           </p>
           <p class="option__text">
-            <span>Ищу команду</span> - Расскажите о своем проекте, или о своих навыках, найдите себе команду, или
+            <span>Ищу команду</span> - Расскажите о своем проекте, или о своих навыках, найдите себе команду или
             привлеките
             к своему проекту единомышленников.
           </p>
@@ -528,17 +536,17 @@
           </div>
           <div class="questions__body" data-tab="1">
             Материал на канале это сборник из научных статей, университетских лекций наших партнеров преподавателей,
-            новостей из мира рекламы и ИТ. <br>
-            Также на канале публикуются полезный контент, созданные командой авторов Brain University.
+            новостей из мира рекламы и IT. <br>
+            Также на канале публикуются полезный контент, созданный командой авторов Brain University.
           </div>
         </div>
         <div class="questions__item">
           <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="2" data-wow-delay=".1s">
-            Что я получу от вашего канала?
+            Что я получу от вашего продукта?
           </div>
           <div class="questions__body wow animate__animated animate__fadeInDown" data-tab="2">
             Наш канал поможет понять устройство мира современной рекламы. <br>
-            Вы узнаете как продвинуть свой продукт, оптимизировать рекламный бюджет, научитесь считать рекламный бюджет,
+            Вы узнаете, как продвинуть свой продукт, оптимизировать рекламный бюджет, научитесь считать рекламный бюджет,
             анализировать конкурентов, создавать имидж своей компании и узнаете про все современные необходимые сервисы
             для работы на рынке маркетинга.
           </div>
@@ -549,7 +557,7 @@
           </div>
           <div class="questions__body" data-tab="3">
             После оплаты подписки вы получите доступ к телеграмм-каналу по выбранному направлению. <br>
-            В нем ежедневно публикуется теоретический, и практический материал который имеет неоспоримую
+            В нем ежедневно публикуется теоретический и практический материал который имеет неоспоримую
             просветительскую ценность
           </div>
         </div>
@@ -559,9 +567,9 @@
           </div>
           <div class="questions__body" data-tab="4">
             Большая часть информации получена от специалистов с более чем 10-летним опытом в отрасли. В канале
-            публикуются работы преподавателей московских вузов, и частных образовательных учреждений. <br>
+            публикуются работы преподавателей московских вузов и частных образовательных учреждений. <br>
             Мы предлагаем качественный материал, который работает на практике. <br>
-            Материал публикуется ежедневно что позволяет всегда актуализировать ученикам имеющуюся информацию
+            Материал публикуется ежедневно, что позволяет всегда актуализировать ученикам имеющуюся информацию
           </div>
         </div>
         <div class="questions__item">
@@ -570,8 +578,8 @@
           </div>
           <div class="questions__body" data-tab="5">
             Естественно. <br>
-            Мы публикуем новости из мира ИТ и маркетинга, говорим о актуальных трендах. <br>
-            Также на канале публикуются кейсы крупных компаний с нестандартными решениями, и полезные сервисы -
+            Мы публикуем новости из мира IT и маркетинга, говорим об актуальных трендах. <br>
+            Также на канале публикуются кейсы крупных компаний с нестандартными решениями и полезные сервисы -
             инструменты.
           </div>
         </div>
@@ -581,7 +589,7 @@
           </div>
           <div class="questions__body" data-tab="6">
             Подписка оформляется единоразово с ежемесячным списанием стоимости в начале каждого нового месяца. <br>
-            Например: если вы оформили подписку 1 сентября, то следующее списание будет 1 октября.
+            Например, если вы оформили подписку 1 сентября, то следующее списание будет 1 октября.
           </div>
         </div>
         <div class="questions__item">
@@ -644,8 +652,9 @@
         </ul>
         <ul class="footer__list-2">
           <li class="footer__li-2">Юридическая информация</li>
-          <li class="footer__li-2"><a href="#">Политика конфеденциальности</a></li>
-          <li class="footer__li-2"><a href="#">Договор оферты</a></li>
+          <li class="footer__li-2"><a href="https://brainuniversity.ru/privacy-policy/">Политика конфиденциальности</a>
+          </li>
+          <li class="footer__li-2"><a href="https://brainuniversity.ru/public-offer/">Договор оферты</a></li>
         </ul>
         <div class="footer__imgs-wrapper">
           <a href="https://vk.com/brainuniversityru">
@@ -656,7 +665,7 @@
                 fill="#111111" fill-opacity="0.3" />
             </svg>
           </a>
-          <a href="https://t.me/Brainuniversity_bot?start=busite">
+          <a href="https://t.me/Brainuniversity_bot?start=bugoodsite">
             <svg class="footer__img" width="24" height="24" viewbox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -880,25 +889,25 @@
           <span>Что стартап отличает от бизнеса?</span>
         </h3>
         <p class="popup__par popup__par--mini-margin">
-          Если ты увидел как хорошо сейчас продаются диски на новенький BMW и решил, что тоже можешь на этом
+          Если ты увидел, как хорошо сейчас продаются диски на новенький BMW и решил, что тоже можешь на этом
           заработать — это будет твой бизнес.<br>
           Если ты понял, что в диски на машину можно добавить дополнительный функционал (например чтобы их можно было
           снять просто нажав на кнопку) и решил разработать такие и продавать, поздравляю — это стартап!
         </p>
         <p class="popup__par popup__par--mini-margin">
-          Стартап это компания по созданию продукта, имеющего ценность для человека. Основан на воспроизводимой
+          Стартап - это компания по созданию продукта, имеющего ценность для человека. Основан на воспроизводимой
           и масштабируемой бизнес-модели. Стартапы не имеют личного капитала, поэтому их создатели всегда в поиске
           инвесторов.
         </p>
         <p class="popup__par popup__par--mini-margin">
-          По сути это тот же бизнес, но с рядом особенностей. Разберём чем стартап конкретно отличается:
+          По сути, это тот же бизнес, но с рядом особенностей. Разберём, чем стартап конкретно отличается:
         </p>
         <p class="popup__par popup__par--mini-margin">
           <span>Идея</span>
         </p>
         <p class="popup__par popup__par--mini-margin">
-          Стартап это всегда что-то новое, либо хорошо улучшенное «сегодняшнее». Например сделать приложение по вызову
-          такси по всему миру — это стартап. Да, uber тоже начинал как стартап, они стали первыми кто догадался
+          Стартап - это всегда что-то новое, либо хорошо улучшенное «сегодняшнее». Например, сделать приложение по вызову
+          такси по всему миру — это стартап. Да, uber тоже начинал как стартап, они стали первыми, кто догадался
           запихнуть мировой таксопарк в иконку на телефоне. А вот проверенная схема перепродажи товара на маркетплейсы
           не будет стартапом, так как идея не нова ни в чем.
         </p>
@@ -907,16 +916,16 @@
         </p>
         <p class="popup__par popup__par--mini-margin">
           Если главная цель любого бизнеса заработать, то цель стартапа помочь людям улучшить жизнь или сделать
-          её проще. Как правило стартапы создаются в сферах цифровых технологий. Множество проектов по улучшению нашей
+          её проще. Как правило, стартапы создаются в сферах цифровых технологий. Множество проектов по улучшению нашей
           жизни разрабатываются прямо сейчас: виртуальные помощники, дополненная реальность, роботы-мусорщики, системы
           безопасности и тд. На данный момент человеческая жизнь — главная ценность нашего мира, владельцы стартапов
-          держат этот факт в голове, также как и инвесторы.
+          держат этот факт в голове, так же как и инвесторы.
         </p>
         <p class="popup__par popup__par--mini-margin">
           <span>Инвестиции</span>
         </p>
         <p class="popup__par popup__par--mini-margin">
-          У стартапов, как правило нет своего капитала, поэтому им всегда нужна помощь сторонних инвесторов. Для поиска
+          У стартапов, как правило, нет своего капитала, поэтому им всегда нужна помощь сторонних инвесторов. Для поиска
           инвестиций проводятся масштабные ПР компании, проекты выставляют на специальные сайты, где люди могут
           пожертвовать деньги создателям. Для стартапов создана целая инфраструктура — инкубаторы, акселлераторы,
           хакатоны, конференции. За хорошими стартапами и стартаперами, эффективной командой не просто идёт охота,
@@ -933,7 +942,7 @@
           так и высока вероятность краха: до 92% стартапов закрываются в первые три года.
         </p>
         <p class="popup__par">
-          Стартапы неотъемлемая часть современной жизни. 90% технологий, которыми мы ежедневно пользуемся, начинались
+          Стартапы - неотъемлемая часть современной жизни. 90% технологий, которыми мы ежедневно пользуемся, начинались
           как стартап.
           В современных ВУЗах студенты вместо дипломных проектов защищают свои стартапы.
         </p>
@@ -949,7 +958,7 @@
           <span>Основные процессы логистики интернет-магазина</span>
         </h3>
         <p class="popup__par popup__par--mini-margin">
-          Традиционно внутри компании выполняют процессы, связанные с взаимодействием с поставщиками: получение
+          Традиционно, внутри компании выполняют процессы, связанные с взаимодействием с поставщиками: получение
           цен и остатков и резервирование товаров. Магазины не хотят никому передавать эти процессы — им важны контакты
           и отношения с поставщиками. Кроме того, при большом количестве
           поставщиков передача этих процессов подрядчикам вызывает технические сложности.
